# radar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: radar.yml  weekly.yml
config/: companies.yaml  config.yaml
data/: radar.sqlite
exports/: latest_top40.csv  latest_top40.json  latest_watchlist.csv  latest_watchlist.json
public/: README.md
radar/: config.py  db.py  export.py  main.py  models.py  role_recommender.py  roles.py  scoring.py
radar-main/: README.md  pyproject.toml  requirements.txt
radar-main/config/: companies.yaml  config.yaml
radar-main/data/: radar.sqlite
radar-main/exports/: latest_top40.json  latest_watchlist.json
radar-main/radar/: config.py  db.py  export.py  main.py  roles.py  scoring.py
radar-main/radar/collectors/: __init__.py  patentsview.py  sec_edgar.py
radar-main/scripts/: run_weekly.sh
radar/collectors/: __init__.py  clinicaltrials.py  greenhouse.py  jobs_json.py  lever.py  workday.py
scripts/: run_daily.sh  run_weekly.sh  workday_scrape.mjs
